Fixed gap menu

--- a/css/style.css
+++ b/css/style.css
@@ -1130,6 +1130,7 @@ header h1 {
     .menu {
         grid-template-columns: repeat(2, 1fr);
         padding: 4.5em 0px;
+        gap: 3em 0;
     }
 
     .menu__item {
